--- a/amazon/static/styles/homepage/cardapio.css
+++ b/amazon/static/styles/homepage/cardapio.css
@@ -12,8 +12,10 @@
 }
 
 .produtos {
+  margin: auto;
+  max-width: 1500px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   justify-items: center;
 }
