--- a/amazon/templates/signup.html
+++ b/amazon/templates/signup.html
@@ -132,5 +132,6 @@
         <a href="{{ url_for('login') }}">Já tem uma conta? Clique aqui para entrar.</a>
     </main>
 
+    <script src="{{ url_for('static', filename='scripts/homepage.js') }}"></script>
     <script src="{{ url_for('static', filename='scripts/zip.js') }}"></script>
 {% endblock %}
