--- a/amazon/templates/login.html
+++ b/amazon/templates/login.html
@@ -46,4 +46,6 @@
 
         <a href="{{ url_for('signup') }}">Ainda não tem uma conta? Clique aqui para criar.</a>
     </main>
+
+<script src="{{ url_for('static', filename='scripts/homepage.js') }}"></script>
 {% endblock %}
