--- a/amazon/templates/contact.html
+++ b/amazon/templates/contact.html
@@ -63,4 +63,6 @@
         </div>
     </div>
 </main>
+
+<script src="{{ url_for('static', filename='scripts/homepage.js') }}"></script>
 {% endblock %}
