--- a/amazon/templates/navbar.html
+++ b/amazon/templates/navbar.html
@@ -7,7 +7,7 @@
         <li><a href="{{ url_for('homepage') }}">Início</a></li>
         <li><a href="#cardapio">Produtos</a></li>
         <li><a href="{{ url_for('sobre') }}">Sobre</a></li>
-        <li><a href="#">{{ url_for('contact') }}</a></li>
+        <li><a href="{{ url_for('contact') }}">Contato</a></li>
         
         {% if current_user.is_authenticated %}
             <li><a href="{{ url_for('logout') }}">Sair</a></li>
