--- a/amazon/static/styles/homepage/footer.css
+++ b/amazon/static/styles/homepage/footer.css
@@ -3,6 +3,7 @@ html {
 }
 
 .footer {
+  height: 60px;
   background-color: #1a2a16; /* Verde escuro inspirado na Amazônia */
   color: #dcdcdc;
   padding: 20px 0;
