--- a/amazon/static/styles/products/products.css
+++ b/amazon/static/styles/products/products.css
@@ -27,7 +27,7 @@ body {
     align-items: center;
     max-width: 1100px;
     width: 100%;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 16px;
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
     animation: aparecer 0.5s ease-out;
@@ -49,17 +49,17 @@ body {
     position: relative;
     display: inline-block;
     background: #fff9f0;
-    padding: 1.2rem;
+    padding-top: 0.2rem;
     border-radius: 16px;
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.1);
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .img-wrapper img {
-    height: 360px;
+    height: auto;
     width: auto;
     border-radius: 12px;
-    object-fit: cover;
+    object-fit: oontain;
     max-width: 100%;
 }
 
@@ -87,7 +87,7 @@ body {
 .info-texto h1 {
     font-family: 'Marcellus SC', serif;
     font-size: 2.7rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     color: #1a3f2d;
 }
 
@@ -120,17 +120,21 @@ body {
     font-size: 2.4rem;
     color: #2e8b57;
     font-weight: 700;
-    margin: 1rem 0;
+    margin: 0;
     font-family: 'Marcellus SC', serif;
+}
+
+.precos {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-bottom: 2rem;
 }
 
 .beneficios p {
     font-size: 1rem;
     color: #2e8b57;
-    margin: 0.5rem 0;
     display: flex;
-    align-items: center;
-    gap: 0.5rem;
 }
 
 .entrega i,
@@ -160,7 +164,7 @@ body {
 }
 
 /* Responsivo */
-@media (min-width: 768px) {
+@media (min-width: 1015px) {
     .produto-info {
         flex-direction: row;
         justify-content: space-between;
@@ -204,3 +208,17 @@ body {
     }
 }
 
+#alert {
+    color: #000000;
+    font-family: "League Script", cursive;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 2rem;
+    margin-bottom: 1.2rem;
+}
+
+#min {
+    color: #000000;
+    font-size: 15px;
+    font-weight: 100;
+}
