--- a/amazon/templates/base.html
+++ b/amazon/templates/base.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>{% block title %}Sabores da Amazônia{% endblock %}</title>
-  
+  <title>{% block title %}Amazon Nutry{% endblock %}</title>
+
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/fotos/favicon.ico') }}">
+
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/reset.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/cardapio.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/footer.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/general.css') }}">  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
 
   {% block links %}
   {% endblock %}
