--- a/amazon/templates/base.html
+++ b/amazon/templates/base.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/cardapio.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/footer.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/general.css') }}">  
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles/homepage/header.css') }}">  
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,5 +34,8 @@
       <p>© 2025 Sabores da Amazônia. Todos os direitos reservados.</p>
     </div>
   </footer>
+
+  <script src="{{ url_for('static', filename='scripts/homepage.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/zip.js') }}"></script>
 </body>
 </html>
